# Code-Archive

./: .gitignore  README.md
ARM/Arbitrary Fibonacci/: arm7.ini  fib-full-1-2.s  fib-full.s  fib-full.uvgui  fib-full.uvgui.JERRY  fib-full.uvgui.wcs  fib-full.uvopt  fib-full.uvproj  fib-small.uvgui  fib-small.uvgui.JERRY  fib-small.uvgui.wcs  fib-small.uvopt  fib-small.uvproj  gcc_arm.ld
Arduino/BLE_beacon_plotter/: test.py
Arduino/DHT11/: DHT11.ino
Arduino/Epoch_time/: epoch_time.ino
Arduino/Pin_test/: pin_test.ino
Arduino/Rubber_Ducky/: README.md  Rubber_Ducky.ino
Arduino/ST7735_graphics_test/: ST7735_graphics_test.ino
Arduino/Serial_ignition/: serial_ignition.ino
Arduino/String_arrary_test/: string_arrary_test.ino
Arduino/TM35_temperature/: tm35_temperature.ino
Batch/: Toggle_IP.bat  check_temperature.bat  ip_mode.bat  reset_wifi.bat
C++/CD Catalogue/: README.md  cd.cpp  cd.h  cdcatalogue.cpp  cdcatalogue.h  main.cpp
C++/Candy_Kids/: Makefile  bbuff.c  candykids.c  stats.c
C++/Deadlock/: Makefile  klock.c  klock.h  locking  main.c
C++/Memory_Allocator/: Makefile  kallocation  kallocator.c  kallocator.h  list.c  list.h  main.c
C++/Miscellaneous/: CustomTypes.cpp  ETriangle.cpp  complex.cpp  quick_sort.cpp  sort_array.cpp
C++/Simple_Shell/: Makefile  shell.c
C++/Stock Data Viewer/: GOOG.csv  Stock.cpp  Test.cpp  dlinkedlist.cpp
C++/Stock System/: main.cpp  rbtreepartial.cpp  redblacktree.h  stockitem.cpp  stockitem.h  stocksystem.cpp  (+1 more)
Kotlin/: AsyncTask.kt
Rust/web/frontend/: Cargo.toml
Rust/web/frontend/src/: main.rs
(+619 files in other folders)
