[package]
authors = ["Jerry <liuyal@sfu.ca>"]
edition = "2018"
name = "frontend"
publish = false
version = "0.1.0"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
yew = { version = "0.7.0", features = ["cbor"] }
stdweb = "0.4.18"


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]


